--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-venv/
+
+# Ignore pygit's internal data
+.pygit/
+
+# Ignore Python caches and compiled files
 __pycache__/
 *.pyc
+
+# Ignore virtual environments
+venv/
